--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=5000
 MONGO_URI= mongodb+srv://AlessandroA:Giovannienr1c0@dinder.x53qgju.mongodb.net/?retryWrites=true&w=majority
-NODE_ENV=development
+NODE_ENV=production
 JWT_SECRET=alessandro1234
